--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,8 +36,8 @@
     function showMessage(message) {
         // var messages = document.getElementById('messages');
         const item = document.createElement('li');
-        item.textContent = message;
-        // item.appendChild(document.createTextNode(message.from + ": " + message.text));
+        // item.textContent = message;
+        item.appendChild(document.createTextNode(message.from + ": " + message.text));
         messages.appendChild(item);
         window.scrollTo(0, document.body.scrollHeight);
     }
