채널명 채팅 페이지로 연결
index.html: 각 채널명을 버튼으로 표시하고, 버튼 클릭 시 해당 채널로 이동합니다.
chat.html: URL 파라미터로 전달된 채널명을 사용하여 해당 채널로 접속합니다.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,7 +39,12 @@
         channelList.innerHTML = '';
         channels.forEach(function (channel) {
             var channelElement = document.createElement('li');
-            channelElement.appendChild(document.createTextNode(channel.name));
+            var channelButton = document.createElement('button');
+            channelButton.appendChild(document.createTextNode(channel.name));
+            channelButton.addEventListener('click', function() {
+                window.location.href = '/chat.html?channel=' + encodeURIComponent(channel.name);
+            });
+            channelElement.appendChild(channelButton);
             channelList.appendChild(channelElement);
         });
     }
