--- a/src/main/resources/static/chat.html
+++ b/src/main/resources/static/chat.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-<h2>Messages</h2>
+<h2 id="channelName"></h2>
 <ul id="messages"></ul>
 <form id="form">
     <input id="from" type="text" placeholder="Your name" autocomplete="off"/>
@@ -20,6 +20,9 @@
 </form>
 <script>
     var stompClient = null;
+    var channel = new URLSearchParams(window.location.search).get('channel');
+
+    document.getElementById('channelName').textContent = 'Channel: ' + channel;
 
     function connect() {
         var socket = new SockJS('/chat');
