--- a/src/main/resources/static/chat.html
+++ b/src/main/resources/static/chat.html
@@ -29,7 +29,7 @@
         stompClient = Stomp.over(socket);
         stompClient.connect({}, function (frame) {
             console.log('Connected: ' + frame);
-            stompClient.subscribe('/topic/messages', function (messageOutput) {
+            stompClient.subscribe('/topic/messages/' + channel, function (messageOutput) {
                 showMessage(JSON.parse(messageOutput.body));
             });
         });
@@ -46,7 +46,7 @@
         e.preventDefault();
         var from = document.getElementById('from').value;
         var text = document.getElementById('text').value;
-        stompClient.send("/app/message", {}, JSON.stringify({'from': from, 'text': text}));
+        stompClient.send("/app/message/" + channel, {}, JSON.stringify({'from': from, 'text': text, 'channel': channel}));
         document.getElementById('text').value = '';
     });
 
