fix #8 채널명이 빈 문자열일 경우 채널생성 중지

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -63,9 +63,13 @@
 
     document.getElementById('createChannelForm').addEventListener('submit', function (e) {
         e.preventDefault();
-        var channelName = document.getElementById('channelName').value;
-        stompClient.send("/app/addChannel", {}, JSON.stringify({'name': channelName}));
-        document.getElementById('channelName').value = '';
+        var channelName = document.getElementById('channelName').value.trim();
+        if (channelName) {
+            stompClient.send("/app/addChannel", {}, JSON.stringify({'name': channelName}));
+            document.getElementById('channelName').value = '';
+        } else {
+            alert("Channel name cannot be empty or whitespace.");
+        }
     });
 
     document.getElementById('deleteChannelButton').addEventListener('click', function () {
