#10 각 채널의 채팅 로그 남기기 완료
ChatController: 채팅메시지와 채팅 기록을 관리합니다. 사용자가 채널에 입장할 때 채팅 기록을 전송합니다.
ChannelController: 채널과 사용자 리스트를 관리합니다. 사용자가 채널에 입장하고 퇴장할 때 사용자 리스트를 업데이트합니다.
chat.html 클라이언트에서채널에 입장할 때 채팅 기록과 사용자 리스트를 불러옵니다.

--- a/src/main/resources/static/chat.html
+++ b/src/main/resources/static/chat.html
@@ -40,12 +40,16 @@
             stompClient.subscribe('/topic/users/' + channel, function (userOutput) {
                 updateUserList(JSON.parse(userOutput.body));
             });
+            stompClient.subscribe('/topic/history/' + channel, function(historyOutput) {
+                loadChatHistory(JSON.parse(historyOutput.body));
+            });
             joinChannel();
         });
     }
 
     function joinChannel() {
         stompClient.send("/app/joinChannel", {}, JSON.stringify({'username': username, 'channel': channel}));
+        stompClient.send("/app/history/" + channel, {});
     }
 
     function leaveChannel() {
@@ -67,6 +71,14 @@
             userElement.appendChild(document.createTextNode(user.username));
             userList.appendChild(userElement);
         });
+    }
+
+    function loadChatHistory(messages) {
+        var messageList = document.getElementById('messages');
+        messageList.innerHTML = '';
+        messages.forEach(function (message) {
+            showMessage(message);
+        })
     }
 
     document.getElementById('form').addEventListener('submit', function (e) {
