--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,8 +23,30 @@
 <script>
     var stompClient = null;
 
+    let socketUrl;
+    if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+        socketUrl = '/chat';
+        console.log(1);
+    } else {
+        // let wsProtocol = window.location.protocol === 'https:' ? 'wss://' : 'http://';
+        let wsProtocol = window.location.protocol === 'https:' ? 'https://' : 'http://';
+        socketUrl = wsProtocol + window.location.host + '/chat';
+        console.log(2);
+    }
+
+    console.log(socketUrl);
+
+    // let wsProtocol = window.location.protocol === 'https:' ? 'wss://' : '';
+    // let wsUrl = wsProtocol + window.location.host + '/chat';
+    // let socket = new SockJS(socketUrl);
+    // console.log(window.location.host);
+    // console.log(wsUrl);
+    // console.log(socket);
+    // console.log('------------');
+
     function connect() {
-        var socket = new SockJS('/chat');
+        console.log(socketUrl);
+        let socket = new SockJS(socketUrl);
         stompClient = Stomp.over(socket);
         stompClient.connect({}, function (frame) {
             console.log('Connected: ' + frame);
